# libagw

./: README.md  meson.build  meson_options.txt
src/: agw-gauge.c  agw-gauge.h  agw-numeric-label.c  agw-numeric-label.h  agw.c  agw.h  agw.xml  libagw.h  libagw.xml  meson.build
test/: ardecoder.c  meson.build
